Update calendar widget styles for 5.4 markup to fix the alignment of a single month link. Follow-up to [a5dbea78]

--- a/src/sass/base/_widgets.scss
+++ b/src/sass/base/_widgets.scss
@@ -306,10 +306,10 @@ h2.widget-title {
     span {
       display: table-cell;
     }
+  }
 
-    .pad {
-      width: 15%;
-    }
+  .wp-calendar-nav-prev, .wp-calendar-nav-next {
+    width: 40%;
   }
 
   th, td, .wp-calendar-nav span {
